# python-project-lvl3

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: python-check.yml
page_loader/: __init__.py  cli.py  engine.py  exceptions.py  html.py  logger.py  page_loader.py  resources.py  storage.py  tools.py  url.py  url_utility.py
page_loader/scripts/: page_loader.py
tests/: test_download_url.py
tests/fixtures/: application.css  changed_html_bad_link.txt  html_response.py  runtime.js
