[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["ajib6ept <asAlbert@narod.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
requests-mock = "^1.9.3"
pytest = "^7.0.0"
flake8 = "^4.0.1"
black = {version = "^22.1.0", allow-prereleases = true}
coverage = "^6.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
