[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["ajib6ept <asAlbert@narod.ru>"]
repository = "https://github.com/ajib6ept/python-project-lvl3"
packages = [
    { include = "page_loader" },
]
classifiers = ["Topic :: Software Development"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"
click = "^8.0.3"
progress = "^1.6"

[tool.poetry.dev-dependencies]
requests-mock = "^1.9.3"
pytest = "^7.0.0"
flake8 = "^4.0.1"
black = {version = "^22.1.0", allow-prereleases = true}
coverage = "^6.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"